# x1safu

./: .gitignore  Anchor.toml  README.md  package.json
.github/workflows/: deploy.yml
app/: .env.example  .env.local  .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
app/src/: App.css  App.tsx  index.css  main.tsx
app/src/components/: Connect.tsx  Dashboard.tsx  Deposit.tsx  Exit.tsx  Sell.tsx  Withdraw.tsx
app/src/lib/: vault.ts
app/src/types/: global.d.ts
docs/: DEPLOY.md  SECURITY.md  SPEC.md
programs/x1safu/: Cargo.toml
programs/x1safu/src/: lib.rs
scripts/: deploy-vercel.sh  setup-vercel.sh
tests/: x1safu.ts
